--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "java-caller",
+  "name": "node-java-caller",
   "version": "0.2.0",
   "description": "Library to easily call java from node sources. Automatically installs java if not present",
   "main": "index.js",
