--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -151,7 +151,7 @@ workflows:
       - debian-jdk-8-node-12
       #         - debian-jdk-9-node-12
       #         - debian-jdk-10-node-12
-      - debian-jdk-11-node-12
+      #      - debian-jdk-11-node-12
       #         - debian-jdk-12-node-12 JDK12 image not working because of apt-get not found ... TODO: investigate
       - no-java-node-latest
       - java-14-node-latest
