--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
   "homepage": "https://github.com/nvuillam/node-java-caller#readme",
   "dependencies": {
     "debug": "^4.1.1",
-    "fs-extra": "^9.0.1"
+    "fs-extra": "^9.0.1",
+    "njre": "^0.2.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
