Cli example / starter Kit README

--- a/examples/cli_app/package.json
+++ b/examples/cli_app/package.json
@@ -25,6 +25,6 @@
   "author": "Nicolas Vuillamy",
   "license": "MIT",
   "dependencies": {
-    "java-caller": "^2.1.0-beta.2"
+    "java-caller": "^2.1.0"
   }
 }
