--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^7.6.0",
     "mocha": "^8.1.1",
-    "nyc": "^15.1.0"
+    "nyc": "^15.1.0",
+    "which": "^2.0.2"
   },
   "engines": {
     "node": ">=12.0.0"
