--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "class"
   ],
   "author": "Nicolas Vuillamy",
-  "license": "GPL-3.0-only",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/nvuillam/node-java-caller/issues"
   },
