Fix Java 8 detection
- Fix Java 8 detection ([#101@npm-groovy-lint](https://github.com/nvuillam/npm-groovy-lint/issues/101))

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
           command: npm ci
       - run:
           name: Testing
-          command: npm run test
+          command: npm run test:debug
 
   # JDK 9 Node 12
   debian-jdk-9-node-12:
