--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -26,9 +26,9 @@ jobs:
         env:
           # All available variables are described in documentation
           # https://github.com/oxsecurity/megalinter#configuration
-          VALIDATE_ALL_CODEBASE: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }} # Validates all source when push on master, else just the git diff with master. Override with true if you always want to lint all sources
+          VALIDATE_ALL_CODEBASE: true
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          DISABLE_LINTERS: JAVASCRIPT_STANDARD
+          DISABLE_LINTERS: JAVASCRIPT_STANDARD,SPELL_PROSELINT
           JAVA_FILTER_REGEX_EXCLUDE: (JavaCallerTester)
 
       # Upload Mega-Linter artifacts. They will be available on Github action page "Artifacts" section
