--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
   },
   "homepage": "https://github.com/nvuillam/node-java-caller#readme",
   "dependencies": {
+    "@babel/eslint-parser": "^7.18.9",
     "debug": "^4.1.1",
     "fs-extra": "^9.0.1",
     "njre": "^0.2.0"
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
     "eslint": "^7.6.0",
     "mocha": "^8.1.1",
     "nyc": "^15.1.0",
