--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -130,6 +130,19 @@ jobs:
           name: Testing
           command: npm run test:debug
 
+  # Java 14 & Node latest
+  java-17-node-latest:
+    docker:
+      - image: circleci/openjdk:17.0.1-buster-node
+    steps:
+      - checkout
+      - run:
+          name: Install dependencies
+          command: npm ci
+      - run:
+          name: Testing
+          command: npm run test:debug
+
   windows:
     executor:
       name: win/default
@@ -155,4 +168,5 @@ workflows:
       #         - debian-jdk-12-node-12 JDK12 image not working because of apt-get not found ... TODO: investigate
       - no-java-node-latest
       - java-14-node-latest
+      - java-17-node-latest
       - windows
