--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
   "dependencies": {
     "debug": "^4.3.4",
     "fs-extra": "^11.1.1",
-    "njre": "^1.0.0"
+    "njre": "^1.0.0",
+    "semver": "^7.5.4"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.22.15",
