--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -36,12 +36,12 @@ jobs:
           # https://github.com/oxsecurity/megalinter#configuration
           VALIDATE_ALL_CODEBASE: true
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          DISABLE_LINTERS: JAVASCRIPT_STANDARD,SPELL_PROSELINT
+          DISABLE_LINTERS: JAVASCRIPT_STANDARD,SPELL_PROSELINT,REPOSITORY_KICS
           JAVA_FILTER_REGEX_EXCLUDE: (JavaCallerTester)
 
       # Upload Mega-Linter artifacts. They will be available on Github action page "Artifacts" section
       - name: Archive production artifacts
-        if: ${{ success() }} || ${{ failure() }}
+        if: success() || failure()
         uses: actions/upload-artifact@v3
         with:
           name: Mega-Linter reports
