--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint": "^8.27.0",
     "mocha": "^10.1.0",
     "nyc": "^15.1.0",
+    "prettier": "^3.1.0",
     "which": "^4.0.0"
   },
   "engines": {
