Use full path of java executable + Refactor CI/CD to test on Mac & Java 21 (#81)
* Handle case where Java 21 is installed and we need 17 by using full path of java executable

Related to https://github.com/nvuillam/vscode-groovy-lint/issues/217#issuecomment-2099808904

* Factorization

* cspell

* changelog

* Also test java 21

* Upgrade CI

* skip java 8 for Mac

* fail-fast: false

* murf

* smurf

* Add quotes only if spaces in overridden javaExecutable

* Upgrade njre & show its debugs in CI

* yamllint

* Fix

* Java 8 on Mac is not supported: Set default minimum java version to 11 on Mac

* Exclude mac + 8 from tests

* Delete circle CI config

* Fix case with spaces

* Revert "Delete circle CI config"

This reverts commit 2ac4004baa0f7f6cc113686743044a5a3c53c592.

* Remove java14

* circle ci

* Arrange tests

* upgrade njre

* skip java 14 on mac tests

* fix test case

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -117,10 +117,10 @@ jobs:
             ./node_modules/.bin/nyc report --reporter text-lcov > coverage.lcov
             curl -s https://codecov.io/bash | bash
 
-  # Java 14 & Node latest
-  java-14-node-latest:
+  # Java 17 & Node latest
+  java-17-node-latest:
     docker:
-      - image: circleci/openjdk:14.0.2-buster-node
+      - image: circleci/openjdk:17.0.1-buster-node
     steps:
       - checkout
       - run:
@@ -130,10 +130,10 @@ jobs:
           name: Testing
           command: npm run test:debug
 
-  # Java 14 & Node latest
-  java-17-node-latest:
+  # Java 21 & Node latest
+  java-21-node-latest:
     docker:
-      - image: circleci/openjdk:17.0.1-buster-node
+      - image: cimg/openjdk:21.0.2-node
     steps:
       - checkout
       - run:
@@ -167,6 +167,6 @@ workflows:
       #      - debian-jdk-11-node-12
       #         - debian-jdk-12-node-12 JDK12 image not working because of apt-get not found ... TODO: investigate
       - no-java-node-latest
-      - java-14-node-latest
       - java-17-node-latest
+      - java-21-node-latest
       - windows
