--- a/.github/linters/.yamllint.yml
+++ b/.github/linters/.yamllint.yml
@@ -18,3 +18,4 @@ rules:
     max: 500
   comments:
     min-spaces-from-content: 1 # Used to follow prettier standard: https://github.com/prettier/prettier/pull/10926
+  truthy: disable
