--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,8 +13,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node_version: ['18', '20']
-        java_version: ['8', '11', '17', '21']
+        node_version: ['18', '20', '24']
+        java_version: ['8', '11', '17', '21', '25']
         java_distrib: [temurin]
         os: [ubuntu-latest, macos-latest, windows-latest]
         include:
