--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,7 @@ concurrency:
 
 jobs:
   test:
+    if: github.event_name != 'push' || github.ref_name == github.event.repository.default_branch
     strategy:
       fail-fast: false
       matrix:
