--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -1,6 +1,8 @@
 DISABLE_LINTERS:
   - TYPESCRIPT_STANDARD
+  - TYPESCRIPT_PRETTIER
 DISABLE_ERRORS_LINTERS:
   - ACTION_ACTIONLINT
   - SPELL_LYCHEE
 FILTER_REGEX_EXCLUDE: (docs\/github-dependents-info\.md|package-lock\.json)
+TYPESCRIPT_DEFAULT_STYLE: prettier
