--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -1,6 +1,7 @@
 DISABLE_LINTERS:
   - TYPESCRIPT_STANDARD
   - TYPESCRIPT_PRETTIER
+TYPESCRIPT_STANDARD_DISABLE_ERRORS: true
 DISABLE_ERRORS_LINTERS:
   - ACTION_ACTIONLINT
   - SPELL_LYCHEE
